--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           npm install
           npm run build
+          cp dist/index.html dist/404.html
 
       - name: Deploy 🚀
         uses: jamesives/github-pages-deploy-action@4.0.0
